--- a/src/templates/data/data.html
+++ b/src/templates/data/data.html
@@ -33,6 +33,43 @@ dayOfWeek = [
 %}
 
 {% set
+productDesc = [
+	{
+		title: 'Состав',
+		desc: '100% п/э'
+	},
+	{
+		title: 'Плотность',
+		desc: '120 гр/м.кв'
+	},
+	{
+		title: 'Ширина',
+		desc: '1.5 м'
+	},
+	{
+		title: 'Цвет',
+		desc: 'коричневый'
+	},
+	{
+		title: 'Производитель',
+		desc: 'Турция'
+	},
+	{
+		title: 'Отпускается',
+		desc: 'от 1 м'
+	},
+	{
+		title: 'Кол-во метров в рулоне',
+		desc: '25'
+	},
+	{
+		title: 'Артикул',
+		desc: 'ас06'
+	}
+]
+%}
+
+{% set
 mainMenu = [
 	{
 		text: 'Ткани',
@@ -238,7 +275,7 @@ cityList3 = [
 %}
 
 {% set
-cityList4 = [	
+cityList4 = [
 ]
 %}
 
