--- a/src/templates/partials/_nav-main.html
+++ b/src/templates/partials/_nav-main.html
@@ -9,8 +9,7 @@
 	</div>
 
 	<!-- begin hamburger -->
-	<div class="nav-main__btn--close"><button class="hamburger js-hamburger"><span></span></button></div>
-	<!-- end hamburger -->		
+	<div class="nav-main__btn--close"><button class="hamburger js-hamburger"><span></span></button></div><!-- end hamburger -->		
 
 	<ul class="nav-main__list">		
 
@@ -94,5 +93,4 @@
 		<li class="nav-main__item"><a href="#" class="nav-main__link">Условия доставки</a></li>
 		<li class="nav-main__item"><a href="#" class="nav-main__link">Контакты</a></li>
 	</ul>
-</nav>
-<!-- end nav-main -->
+</nav><!-- end nav-main -->
