--- a/src/sass/helpers/_vars.scss
+++ b/src/sass/helpers/_vars.scss
@@ -1,20 +1,20 @@
 //prefix
 
 //FONT
-$f        :roboto-400, sans-serif;
-$f-light  :roboto-300, sans-serif;
-$f-medium :roboto-500, sans-serif;
-$f-bold   :roboto-600, sans-serif;
+$f       : roboto-400, sans-serif;
+$f-light : roboto-300, sans-serif;
+$f-medium: roboto-500, sans-serif;
+$f-bold  : roboto-600, sans-serif;
 
-$f2        :robotoslab-400, sans-serif;
-$f2-light  :robotoslab-300, sans-serif;
-$f2-medium :robotoslab-500, sans-serif;
-$f2-bold   :robotoslab-600, sans-serif;
+$f2       : robotoslab-400, sans-serif;
+$f2-light : robotoslab-300, sans-serif;
+$f2-medium: robotoslab-500, sans-serif;
+$f2-bold  : robotoslab-600, sans-serif;
 
-$font-size-base   : 16px;
-$font-family-base : $f;
-$line-height-base : 1.5;
-$font-weight-base : 400;
+$font-size-base  : 16px;
+$font-family-base: $f;
+$line-height-base: 1.5;
+$font-weight-base: 400;
 
 //Отступы
 $base-indent    : 20px;
@@ -24,38 +24,38 @@ $section-indent : 50px;
 $gutter         : $base-indent;
 
 //Base Variebles
-$color-accent           :#a3467d;
-$color-main       		:#95d6c9;
-$color-third            :#ffe51c;
+$color-accent: #a3467d;
+$color-main  : #95d6c9;
+$color-third : #ffe51c;
 
 //gray
 // $gray--darkest          :;
-$gray--darken           :#565656;
-$gray--dark             :#808080;
-$gray                   :#aeaeae;
-$gray--light            :#e1e1e1;
-$gray--lighten          :#e6e6e6;
-$gray--lightest         :#f6f6f6;
+$gray--darken  : #565656;
+$gray--dark    : #808080;
+$gray          : #aeaeae;
+$gray--light   : #e1e1e1;
+$gray--lighten : #e6e6e6;
+$gray--lightest: #f6f6f6;
 
 //clolors
-$color-muted            :#d6d6d6;
-$color-primary			:$color-main;
-$color-success			:#8cc152;
-$color-info             :#2386dc;
-$color-danger           :#ff0600;
+$color-muted  : #d6d6d6;
+$color-primary: $color-main;
+$color-success: #8cc152;
+$color-info   : #2386dc;
+$color-danger : #ff0600;
 
 $color-link             :$color-info;
 
 //text
-$color-text              :$gray--darken;
-$color-text--light       :$gray--dark;
+$color-text       : $gray--darken;
+$color-text--light: $gray--dark;
 
 //bg
 // $color-bg--darkest       :;
 // $color-bg--darken        :;
-$color-bg--dark          :$gray--darken;
-$color-bg--light         :$gray--lighten;
-$color-bg--lighten       :$gray--lightest;
+$color-bg--dark   : $gray--darken;
+$color-bg--light  : $gray--lighten;
+$color-bg--lighten: $gray--lightest;
 // $color-bg--lightest      :;
 
 //Icon
@@ -66,10 +66,10 @@ $color-icon--light  :#a2a2a2;
 // $color-border--darkest   :;
 // $color-border--darken    :;
 // $color-border--dark      :;
-$color-border--dark      :$gray--dark;
-$color-border            :$gray;
-$color-border--light     :$gray--light;
-$color-border--lighten   :$gray--lighten;
+$color-border--dark   : $gray--dark;
+$color-border         : $gray;
+$color-border--light  : $gray--light;
+$color-border--lighten: $gray--lighten;
 // $color-border--lighten   :;
 // $color-border--lightest  :;
 
@@ -85,42 +85,43 @@ $bxs-i: inset 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 
 
 //button colors
 $button-colors: (
-	accent         : $color-accent,
-	default        : $color-main,
-	yellow         : $color-third,
-	success        : $color-success,
-	error          : $color-danger,
-	info           : $color-info,
-	muted          : $gray--darken
+	accent : $color-accent,
+	default: $color-main,
+	yellow : $color-third,
+	success: $color-success,
+	error  : $color-danger,
+	info   : $color-info,
+	muted  : $gray--darken
 );
 
 //z-index
 $z-index: (
-	bottom                 : -9999,
-	down                   : -1,
-	default                : 1,
-	absolute               : 50,
-	fixed                  : 99,
-	dropdown               : 333,
-	overlay                : 900,
-	mobileMenu             : 901,
-	modal-overlay          : 1000,
-	modal                  : 1001
+	bottom       : -9999,
+	down         : -1,
+	default      : 1,
+	absolute     : 50,
+	fixed        : 99,
+	dropdown     : 333,
+	lk           : 500,
+	overlay      : 900,
+	mobileMenu   : 901,
+	modal-overlay: 1000,
+	modal        : 1001
 );
 
 //Icons
-$icon-vk        : '\f189';
-$icon-odnk      : '\f263';
-$icon-inst      : '\f16d';
-$icon-order     : '\f07a';
-$icon-fav       : '\f004';
-$icon-data      : '\f044';
-$icon-exit      : '\f08b';
+$icon-vk   : '\f189';
+$icon-odnk : '\f263';
+$icon-inst : '\f16d';
+$icon-order: '\f07a';
+$icon-fav  : '\f004';
+$icon-data : '\f044';
+$icon-exit : '\f08b';
 
 $soc-icons: (
-	vk          : $icon-vk,
-	ok          : $icon-odnk,
-	inst        : $icon-inst
+	vk  : $icon-vk,
+	ok  : $icon-odnk,
+	inst: $icon-inst
 );
 
 $nav-lk-icons: (
@@ -142,22 +143,22 @@ $breakpoints: (
 );
 
 //Modal Variebles
-$modal-border-width:             1px;
-$modal-border-color:             $color-border--light;
-$border-radius:                  $border-radius;
+$modal-border-width: 1px;
+$modal-border-color: $color-border--light;
+$border-radius     : $border-radius;
 
-$modal-box-shadow:               0 .25rem .5rem rgba(#000, .5) !default;
+$modal-box-shadow: 0 .25rem .5rem rgba(#000, .5) !default;
 
-$modal-backdrop-bg:              #000 !default;
-$modal-content-bg:               #fff !default;
-$modal-backdrop-opacity:         .5 !default;
-$modal-header-padding:           1rem !default;
-$modal-inner-padding:            1rem !default;
+$modal-backdrop-bg     : #000 !default;
+$modal-content-bg      : #fff !default;
+$modal-backdrop-opacity: .4 !default;
+$modal-header-padding  : 1rem !default;
+$modal-inner-padding   : 1rem !default;
 
 
-$modal-md:                       500px !default;
-$modal-sm:                       300px !default;
-$modal-lg:                       800px !default;
+$modal-md: 500px !default;
+$modal-sm: 300px !default;
+$modal-lg: 800px !default;
 
-$transition-collapse:            height .35s ease !default;
-$transition-fade:                opacity .15s linear !default;
+$transition-collapse: height .35s ease !default;
+$transition-fade    : opacity .15s linear !default;
