--- a/src/templates/popups.html
+++ b/src/templates/popups.html
@@ -27,10 +27,11 @@ headerClass: bg--dark
 			<a href="#auth-form" data-toggle="modal">Регистрация</a>
 			<a href="#change-city" data-toggle="modal">Выбор города</a>
 			<a href="#logout" data-toggle="modal">Выход</a>
+			<a href="#preview" data-toggle="modal" class="js-preview">Каталог превью</a>
 
 		</div>
 
-	</main>	
+	</main>
 	<!-- end home -->
 
 {% endblock %}
