--- a/src/templates/card.html
+++ b/src/templates/card.html
@@ -226,7 +226,7 @@ title: Атлас дюпон «izumrud»
 										<span class="related__price">12,80 руб</span>
 									</div>
 								</a>
-								{% endfor %}﻿
+								{% endfor %}
 							</div>
 						</div>
 
@@ -245,7 +245,7 @@ title: Атлас дюпон «izumrud»
 										<span class="related__price">12,80 руб</span>
 									</div>
 								</a>
-								{% endfor %}﻿
+								{% endfor %}
 							</div>
 						</div>
 
@@ -264,7 +264,7 @@ title: Атлас дюпон «izumrud»
 										<span class="related__price">12,80 руб</span>
 									</div>
 								</a>
-								{% endfor %}﻿
+								{% endfor %}
 							</div>
 						</div>
 
