--- a/src/templates/404.html
+++ b/src/templates/404.html
@@ -1,5 +1,5 @@
 ---
-title: 
+title:
 ---
 {% extends "layouts/_layout.html" %}
 
@@ -8,11 +8,13 @@ title:
 	<!-- begin main error -->
 	<main class="main error">
 
-		<div class="error__inner">
+			<div class="error__inner">
+				<i class="fa fa-frown-o error__icon"></i>
+				<h1 class="error__title">404</h1>
+				<div class="error__text">Упс...Страница которую вы ищите не найдена. <br> Скорее всего вы попали на битую ссылку или опечатались при вводе URL. <br> Проверьте правильность Url или <a class="button-link error__link" href="home.html">вернитесь на главную</a></div>
+			</div>
 
-		</div>
-
-	</main>	
+	</main>
 	<!-- end main error -->
 
 {% endblock %}
