--- a/src/templates/card.html
+++ b/src/templates/card.html
@@ -44,7 +44,7 @@ title: Атлас дюпон «izumrud»
 			<div class="card__desc">
 				<h1 class="h1 product-item__title card__title" itemprop="name">Атлас дюпон <span>white</span></h1>
 
-				<div class="card__price">340,00 <span>руб/м</span></div>
+				<div class="card__price">340,00 <span>руб/м</span><small>-15%</small></div>
 
 				<!-- begin item-select -->
 				<div class="item-select__group card__item-select">
