--- a/src/templates/partials/_popup.html
+++ b/src/templates/partials/_popup.html
@@ -125,9 +125,7 @@
 								<span>white</span>
 							</h1>
 
-							<div class="card__price">340,00
-								<span>руб/м</span>
-							</div>
+							<div class="card__price">340,00 <span>руб/м</span><small>-15%</small></div>
 
 							<!-- begin item-select -->
 							<div class="item-select__group card__item-select">
