--- a/src/templates/popups.html
+++ b/src/templates/popups.html
@@ -20,7 +20,7 @@ headerClass: bg--dark
 	<!-- begin home -->
 	<main class="main">
 
-		<h1>Попап окна на сайте</h1>
+		<h1 style="margin-top: 40px;">Попап окна на сайте</h1>
 
 		<div class="container popup__list">
 
