--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -4,7 +4,6 @@
 	height: 40px;
 	line-height: 38px;
 	font-family: $f-medium;
-	// text-transform: uppercase;
 	text-align: center;
 	font-size: 14px;
 	letter-spacing: 0.3px;
@@ -17,6 +16,12 @@
 	cursor: pointer;
 	position: relative;
 	@include tr;
+}
+
+@mixin btnBig {
+	height: 45px;
+    line-height: 44px;
+    font-size: 16px;
 }
 
 .button {
