--- a/src/sass/pages/_404.scss
+++ b/src/sass/pages/_404.scss
@@ -25,9 +25,7 @@
 		}
 	}//.error__title
 
-	&__text {
-		line-height: 1.8;
-	}//.error__text
+	&__text {line-height: 1.8;}//.error__text
 
 	&__link {
 		font-size: 16px;
