--- a/src/sass/pages/_card.scss
+++ b/src/sass/pages/_card.scss
@@ -143,7 +143,7 @@ $card-indent: $gutter*2;
 			margin-bottom: $gutter/1.5;
 		}
 		span{
-			font-family: $f;
+			font-family: $f-light;
 			font-size: 15px;
 		}
 		small {
@@ -219,11 +219,9 @@ $card-indent: $gutter*2;
 		}//.card__btn--back
 
 		&--cart{
-			height: 45px;
-			line-height: 44px;
-			font-size: 16px;
 			padding-right: 60px;
 			padding-left: 20px;
+			@include btnBig;
 
 			span{
 				overflow: hidden;
