--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -34,19 +34,21 @@ advantages:
 					{% for i in range(1, 4) %}
 					<div class="promo-gallery__item">
 						<div class="promo-gallery__img">
-							<picture>
-								<source media="(max-width: 480px)" srcset="img/promo/mobile/{{i}}.jpg">
-								<img src="img/promo/desktop/{{i}}.jpg" alt="alt">
-							</picture>
+							<a class="promo-gallery__link" href="#">
+								<picture>
+									<source media="(max-width: 480px)" srcset="img/promo/mobile/{{i}}.jpg">
+									<img src="img/promo/desktop/{{i}}.jpg" alt="alt">
+								</picture>
+							</a>
 						</div>
 					</div>
-					{% endfor %}﻿
+					{% endfor %}
 				</div>
 			</div>
 
 		</div>
 	</section><!-- end home-slider -->
-	
+
 	<!-- begin new -->
 	<section class="bz-section new">
 		<div class="container">
@@ -60,8 +62,8 @@ advantages:
 				<div class="bz-slider__arrow bz-slider__arrow--next"></div>
 				<div class="bz-slider__slides js-bz-slider--new">
 					{% for i in range(0, 6) %}
-					{{ item.productItemSmall() }}
-					{% endfor %}﻿
+						{{ item.productItemSmall() }}
+					{% endfor %}
 				</div>
 			</div>
 
@@ -155,7 +157,7 @@ advantages:
 						</div>
 					</div>
 				</div>
-			</div>			
+			</div>
 
 		</div>
 	</section><!-- end new -->
@@ -189,13 +191,13 @@ advantages:
 						<span class="advantages-item__num">{{ item.num }} <span>{{ item.numText }}</span></span>
 					</div>
 				</div>
-				{% endfor %}﻿
+				{% endfor %}
 			</div>
 
 		</div>
 	</section><!-- end advantages -->
 
-</main>	
+</main>
 <!-- end home -->
 
 {% endblock %}
