--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -249,7 +249,7 @@
 			line-height: 50px;
 			border: 0;
 			background-color: $gray--lightest;
-			position: absolute;
+			position: fixed;
 			top: 0;
 			right: -50px;
 			display: flex;
