--- a/src/templates/data/data.html
+++ b/src/templates/data/data.html
@@ -73,7 +73,8 @@ productDesc = [
 mainMenu = [
 	{
 		text: 'Ткани',
-		icon: 'cloth'
+		icon: 'cloth',
+		active: 'is-active'
 	},
 	{
 		text: 'Швейная фурнитура',
