--- a/src/sass/components/_select.scss
+++ b/src/sass/components/_select.scss
@@ -31,17 +31,18 @@
 	.select2-container{min-width: 185px;}
 	.select2-container--default .select2-selection--single{border: 0;}
 	.select2-container--default.select2-container--open.select2-container--below .select2-selection--single, .select2-container--default.select2-container--open.select2-container--below .select2-selection--multiple{
-		background-color: $color-bg--dark;
+		border-bottom: 1px solid $color-border--light;
+		box-shadow: 0 7px 12px 0 rgba(0,0,0,.2);
 
-		.select2-selection__rendered{color: #fff;}
+		.select2-selection__rendered{color: $color-text;}
 		.select2-selection__arrow{
 			b{
-				&::before{color: #fff;}
+				&::before{color: $color-text;}
 			}
 		}
 	}
 	.select2-container--default .select2-search--dropdown .select2-search__field, .select2-dropdown{
 		color: #fff;
 		border-color: $color-bg--dark;
-	}	
+	}
 }//.bz-select--dark
