--- a/src/templates/partials/components/_catalog-filter.html
+++ b/src/templates/partials/components/_catalog-filter.html
@@ -11,26 +11,31 @@
 				<div class="catalog-filter__content accordeon__content js-scroll">
 					<div class="catalog-filter__subitem">
 						{{ item.checkbox('белый', 'checkbox--transform js-checkbox') }}
-						<span class="catalog-filter__color" data-filter-color="#fff"></span>
+						<span class="catalog-filter__color"
+						      data-filter-color="#fff"></span>
 					</div>
 					<div class="catalog-filter__subitem">
 						{{ item.checkbox('кремовый', 'checkbox--transform js-checkbox') }}
-						<span class="catalog-filter__color" data-filter-color="#e4d8cb"></span>
+						<span class="catalog-filter__color"
+						      data-filter-color="#e4d8cb"></span>
 					</div>
 					<div class="catalog-filter__subitem">
 						{{ item.checkbox('синий', 'checkbox--transform js-checkbox') }}
-						<span class="catalog-filter__color" data-filter-color="#46358d"></span>
+						<span class="catalog-filter__color"
+						      data-filter-color="#46358d"></span>
 					</div>
 					<div class="catalog-filter__subitem">
 						{{ item.checkbox('зеленый', 'checkbox--transform js-checkbox') }}
-						<span class="catalog-filter__color" data-filter-color="#233e23"></span>
+						<span class="catalog-filter__color"
+						      data-filter-color="#233e23"></span>
 					</div>
 
 				</div>
 			</div>
 			<div class="catalog-filter__item js-catalog-filter-item accordeon__item">
 				<div class="catalog-filter__subtitle accordeon__title">Плотность ткани</div>
-				<div class="catalog-filter__content accordeon__content js-scroll" style="display: none;">
+				<div class="catalog-filter__content accordeon__content js-scroll"
+				     style="display: none;">
 					<div class="catalog-filter__subitem">
 						{{ item.checkbox('110', 'checkbox--transform') }}
 					</div>
@@ -45,19 +50,19 @@
 					</div>
 					<div class="catalog-filter__subitem">
 						{{ item.checkbox('220', 'checkbox--transform') }}
-					</div>								
+					</div>
 				</div>
 			</div>
 			<div class="catalog-filter__item js-catalog-filter-item accordeon__item">
 				<div class="catalog-filter__subtitle accordeon__title">Цена</div>
-				<div class="catalog-filter__content accordeon__content js-scroll" style="display: none;">
+				<div class="catalog-filter__content accordeon__content js-scroll"
+				     style="display: none;">
 					<div class="catalog-filter__item_price js-catalog-filter-item-price">
 						<div class="catalog-filter__range range">
-							<div
-							class="range__slider"
-							id="js-catalog-filter-slider"
-							data-start="350"
-							data-end="680"></div>
+							<div class="range__slider"
+							     id="js-catalog-filter-slider"
+							     data-start="350"
+							     data-end="680"></div>
 						</div>
 						<div class="range__diapazon">
 							<div class="range__from">
@@ -74,7 +79,8 @@
 			</div>
 			<div class="catalog-filter__item js-catalog-filter-item accordeon__item">
 				<div class="catalog-filter__subtitle accordeon__title">Производитель</div>
-				<div class="catalog-filter__content accordeon__content js-scroll" style="display: none;">
+				<div class="catalog-filter__content accordeon__content js-scroll"
+				     style="display: none;">
 					<div class="catalog-filter__subitem">
 						{{ item.checkbox('Турция', 'checkbox--transform') }}
 					</div>
@@ -86,13 +92,15 @@
 					</div>
 					<div class="catalog-filter__subitem">
 						{{ item.checkbox('Корея', 'checkbox--transform') }}
-					</div>							
+					</div>
 				</div>
 			</div>
 		</div>
 		<div class="catalog-filter__footer">
-			<button class="catalog-filter__btn catalog-filter__btn--close js-catalog-filter--hide">Закрыть</button>
-			<button class="catalog-filter__btn catalog-filter__btn--aply js-catalog-filter--hide">Применить</button>
+			<a href="javascript:void(0)"
+			   class="catalog-filter__btn catalog-filter__btn--close js-catalog-filter--hide">Закрыть</a>
+			<a href="javascript:void(0)"
+			   class="catalog-filter__btn catalog-filter__btn--aply js-catalog-filter--hide">Применить</a>
 		</div>
 	</div>
 
@@ -101,18 +109,34 @@
 	<div class="catalog-filter__cloth cloth">
 		<h3 class="h3 cloth__title">Тип ткани</h3>
 		<div class="cloth__item">
-			<a href="#" class="cloth__subtitle">Атлас<span class="cloth__count">1100</span></a>
+			<a href="#"
+			   class="cloth__subtitle">Атлас
+				<span class="cloth__count">1100</span>
+			</a>
 			<ul>
-				<li><a href="#">Дюпон</a></li>
-				<li><a href="#">Матовый</a></li>
-				<li><a href="#">Тонкий</a></li>
-				<li><a href="#">Стрейч</a></li>
+				<li>
+					<a href="#">Дюпон</a>
+				</li>
+				<li>
+					<a href="#">Матовый</a>
+				</li>
+				<li>
+					<a href="#">Тонкий</a>
+				</li>
+				<li>
+					<a href="#">Стрейч</a>
+				</li>
 			</ul>
 		</div>
 		<div class="cloth__item">
-			<a href="#" class="cloth__subtitle">Бархат<span class="cloth__count">800</span></a>
+			<a href="#"
+			   class="cloth__subtitle">Бархат
+				<span class="cloth__count">800</span>
+			</a>
 			<ul>
-				<li><a href="#">Стрейч</a></li>
+				<li>
+					<a href="#">Стрейч</a>
+				</li>
 			</ul>
 		</div>
 	</div>
